--- a/www/r/screen.css
+++ b/www/r/screen.css
@@ -12,9 +12,19 @@
 /*   - Cheery Pink      :: #FF6B6B */
 /*   - grandma's pillow :: #C44D58 */
 
+#eventsBox, #log {
+    border: 1px solid #999;
+}
+
 #eventCounts {
+    border-collapse: collapse;
+    float: left;
     text-align: center;
     padding: 0 .2em;
+}
+
+#eventCounts th, #eventCounts td {
+    border: 4px solid #fff;
 }
 
 .getBackground {
@@ -26,7 +36,6 @@
 }
 
 #log {
-    border: 1px solid #999;
     height: 20em;
     overflow-y: auto;
 }
