display colours instead of digests for values

--- a/www/r/screen.css
+++ b/www/r/screen.css
@@ -60,6 +60,11 @@ h3 {
     text-align: center;
 }
 
+.logItem .value {
+    display: inline-block;
+    width: 4em;
+}
+
 /* ******************** */
 /* Charts */
 /* ******************** */
