--- a/www/r/screen.css
+++ b/www/r/screen.css
@@ -21,6 +21,22 @@ h3 {
     border-top: 1px solid #999;
 }
 
+#tipBox {
+    padding-top: 0.2em;
+}
+
+#tipGraphLegend {
+    float: left;
+    height: 200px;
+    text-align: right;
+    font-weight: bold;
+    padding-left: 0.2em;
+}
+
+#tipGraph {
+    margin-left: 10px;
+}
+
 #eventCounts {
     border-collapse: collapse;
     text-align: center;
