--- a/www/r/screen.css
+++ b/www/r/screen.css
@@ -85,6 +85,7 @@ body {
 /* ******************** */
 
 #tabHead {
+    display: none;
     width: 6em;
     float: left;
     margin-top: 2em;
@@ -104,7 +105,7 @@ body {
 
 #tabBody {
     float: left;
-    border-left: 2px solid #333;
+    /* border-left: 2px solid #333; */
     padding-left: 10px;
     margin-left: 10px;
     margin-top: 2em;
